[gd_scene load_steps=13 format=3 uid="uid://ckypo4jsjuepe"]

[ext_resource type="Script" path="res://src/loading.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://tydi43vfn4ga" path="res://data/images/icon.png" id="2"]
[ext_resource type="FontFile" uid="uid://bf05034dcfcfc" path="res://data/fonts/Roboto-Black.ttf" id="3"]
[ext_resource type="Theme" uid="uid://68ace3qam0yu" path="res://data/themes/button-theme.tres" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/40/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/40/0/kerning_overrides/35/0 = Vector2(0, 0)
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/35/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/40/0 = Vector2(0, 0)
cache/0/35/0/kerning_overrides/35/0 = Vector2(0, 0)

[sub_resource type="Animation" id="2"]
resource_name = "Loading"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/VBoxContainer/Message:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="7"]
resource_name = "Postload"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="6"]
resource_name = "Preload"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/VBoxContainer/Message:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="5"]
resource_name = "Quit Hide"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Options/Quit:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/Options/Resume:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="4"]
resource_name = "Quit Show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/VBoxContainer/Message:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/Options/Quit:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/Options/Resume:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background/Options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Background/VBoxContainer/Message:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background/Options/Quit:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background/Options/Resume:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p12k3"]
_data = {
"Loading": SubResource("2"),
"Postload": SubResource("7"),
"Preload": SubResource("6"),
"Quit Hide": SubResource("5"),
"Quit Show": SubResource("4"),
"RESET": SubResource("3")
}

[node name="Loading" type="CanvasLayer"]
layer = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.145098, 0.145098, 0.164706, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -157.0
offset_right = 272.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Logo" type="TextureRect" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2")
stretch_mode = 4
metadata/_edit_lock_ = true

[node name="Message" type="Label" parent="Background/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 35
text = "Now Loading..."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Options" type="HBoxContainer" parent="Background"]
visible = false
layout_mode = 0
offset_top = 575.0
offset_right = 1280.0
offset_bottom = 615.0
theme_override_constants/separation = 50
alignment = 1
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="Background/Options"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("4")
disabled = true
text = "Quit"
metadata/_edit_lock_ = true

[node name="Resume" type="Button" parent="Background/Options"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme = ExtResource("4")
disabled = true
text = "Resume"
metadata/_edit_lock_ = true

[node name="Animator" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_p12k3")
}

[connection signal="pressed" from="Background/Options/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Background/Options/Resume" to="." method="_on_resume_pressed"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animator_finished"]
